--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,8 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.7.4'
 	//implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.8'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
+	//runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
