--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
 #spring.datasource.username=root
 #spring.datasource.password=20001022
+
+spring.jpa.defer-datasource-initialization = true
+#jpa set logging
+logging.level.org.hibernate.SQL=DEBUG
+#show clearly
+spring.jpa.properties.hibernate.format_sql=true
+#show parameter
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
