--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.h2.console.enabled=true
 
 spring.datasource.jdbc-url=jdbc:h2://localhost:8080/test
 
-spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
