--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = update
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
 #spring.datasource.username=root
