--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,12 @@
 spring.h2.console.enabled=true
 
 spring.datasource.jdbc-url=jdbc:h2://localhost:8080/test
-
 spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.driver.class.name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create-drop
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
 #spring.datasource.username=root
