--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+test/*.java
 ### STS ###
 .apt_generated
 .classpath
@@ -38,3 +38,4 @@ out/
 
 ###비밀키###
 #secrets/
+
