--- a/build.gradle
+++ b/build.gradle
@@ -34,10 +34,10 @@ dependencies {
 	implementation group : 'org.mariadb.jdbc', name:'mariadb-java-client', version:'3.0.6'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '2.7.4'
 
-	//implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.8'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.8'
 	compileOnly 'org.projectlombok:lombok'
-	//runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
-	runtimeOnly 'com.h2database:h2'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
+	//runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
