--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,14 @@ dependencies {
 
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.8'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
-	//runtimeOnly 'com.h2database:h2'
+	//runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
+	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
 	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+	// Swagger
+	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 }
 
 test {
