--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 
 spring.h2.console.enabled=true
 
-#spring.datasource.jdbc-url=jdbc:h2:tcp://localhost/~/test
-#spring.datasource.url=jdbc:h2:mem:test
-#spring.datasource.driver.class.name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.jdbc-url=jdbc:h2:tcp://localhost/~/test
+spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.driver.class.name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.jpa.hibernate.ddl-auto = update
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
-spring.datasource.username=root
-spring.datasource.password=20001022
+#spring.jpa.hibernate.ddl-auto = update
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
+#spring.datasource.username=root
+#spring.datasource.password=20001022
 
 spring.jpa.defer-datasource-initialization = true
 #jpa set logging
@@ -21,3 +21,4 @@ logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
 #show parameter
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
