--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,16 @@
 
 spring.h2.console.enabled=true
-
-
-
-aws.accessKeyId=AKIAZQYR3ODQRINYFB7P
-aws.secretKey=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
-aws.s3.bucketName=foxes
-cloud.aws.region.static=?? ???
-ccloud.aws.s3.bucket.url=url ???
-
-
-#spring.jpa.hibernate.ddl-auto = update
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
-#spring.datasource.username=root
-#spring.datasource.password=20001022
-spring.datasource.jdbc-url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.url=jdbc:h2:mem:test
-spring.datasource.driver.class.name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
+spring.datasource.username=root
+spring.datasource.password=20001022
+#spring.datasource.jdbc-url=jdbc:h2:tcp://localhost/~/test
+#spring.datasource.url=jdbc:h2:mem:test
+#spring.datasource.driver.class.name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.jpa.defer-datasource-initialization = true
 #jpa set logging
