--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,9 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://54.215.135.43:3306/database01
 spring.datasource.username=root
 spring.datasource.password=20001022
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 #spring.datasource.jdbc-url=jdbc:h2:tcp://localhost/~/test
 #spring.datasource.url=jdbc:h2:mem:test
 #spring.datasource.driver.class.name=org.h2.Driver
